--- a/package.json
+++ b/package.json
@@ -2,23 +2,40 @@
   "name": "frontend-repo",
   "version": "0.1.0",
   "private": true,
+  "description": "A frontend app for coding test at eBuddy Pte. Ltd.",
+  "author": "Arif R <r07.arif@gmail.com>",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.16.0",
+    "@mui/material": "^5.15.21",
+    "@mui/material-nextjs": "^5.15.11",
+    "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.12.2",
+    "next": "14.2.4",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
